# eteal

./: README.md  docker-compose.yml  pyproject.toml
eteal/: __init__.py
eteal/extract/: __init__.py  sql.py
eteal/load/: __init__.py  minio.py  sql.py
eteal/transform/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_extract.py  test_load.py  test_transform.py
