[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eteal"
version = "0.1.0"
description = "A lightweight ETL library supporting SQL databases (including MSSQL) and MinIO/S3 object storage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["etl", "sqlalchemy", "mssql", "minio", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "minio>=7.0",
]

[project.optional-dependencies]
mssql = [
    "pyodbc>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "pyarrow>=15.0",
    "testcontainers[mssql]>=4.0",
    "testcontainers[minio]>=4.0",
    "pyodbc>=5.0",
]

[project.urls]
Repository = "https://github.com/aggreyeric/eteal"

[tool.setuptools.packages.find]
where = ["."]
include = ["eteal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require running Docker containers (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["eteal"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
